--- a/app/src/main/res/layout/activity_frm_buscar_maestro.xml
+++ b/app/src/main/res/layout/activity_frm_buscar_maestro.xml
@@ -9,7 +9,7 @@
 
 
     <ImageView
-        android:id="@+id/imageView4"
+        android:id="@+id/iv_Logo"
         android:layout_width="413dp"
         android:layout_height="79dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -29,6 +29,6 @@
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView4" />
+        app:layout_constraintTop_toBottomOf="@+id/iv_Logo" />
 
 </android.support.constraint.ConstraintLayout>
