--- a/app/src/main/res/layout/activity_frm_maestros.xml
+++ b/app/src/main/res/layout/activity_frm_maestros.xml
@@ -9,7 +9,7 @@
 
 
     <ImageView
-        android:id="@+id/imageView4"
+        android:id="@+id/iv_Logo"
         android:layout_width="413dp"
         android:layout_height="79dp"
         android:layout_marginTop="8dp"
@@ -34,7 +34,7 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView4" />
+        app:layout_constraintTop_toBottomOf="@+id/iv_Logo" />
 
     <TextView
         android:id="@+id/lblNombreMaestro"
